# drone-fleet-ternary

./: AGENT.md  Cargo.toml  README.md
src/: lib.rs
